style/style.css
/* ... */
.MUI_FloatingButton:hover {
background-color:rgba(224, 224, 224, 0.5);
 
}
.MUI_FloatingButton_animate_small {
transform:scale(0);

}
.MUI_FloatingButton_animate_large {
transform:scale(1);

}
.MUI_FloatingButton_size_small {
height:34px;
min-width:34px;
padding:0px 8px;

}
.MUI_FloatingButton_size_large {
height:48px;
min-width:48px;
padding:0px 16px;

}
.MUI_FloatingButton_text-enabled {
width:fit-content;
border-radius:50px;
padding:0 15px 0 15px;

}
.MUI_FloatingButton_text-enabled > svg { margin-right: 10px; }
.MUI_FloatingButton_color_primary {
color:white;
background-color:rgb(33, 150, 243);

}
.MUI_FloatingButton_color_primary:hover {
background-color:rgba(33, 150, 243, 0.7);
 
}
.MUI_FloatingButton_color_primary > svg { fill: white; }
.MUI_FloatingButton_color_secondary {
color:white;
background-color:rgb(0, 121, 107);

}
.MUI_FloatingButton_color_secondary:hover {
background-color:rgba(0, 121, 107, 0.7);
 
}
.MUI_FloatingButton_color_secondary > svg { fill: white; }
.MUI_FloatingButton_disabled {
cursor:default;
background-color:rgba(0, 0, 0, 0.12);
color:rgba(0, 0, 0, 0.5);

}
.MUI_FloatingButton_disabled:hover {
background-color:rgba(0, 0, 0, 0.12);
 
}
.MUI_FloatingButton_disabled > svg { fill: rgba(0, 0, 0, 0.3); }
.MUI_Form_Root {
display:inline-flex;
flex-direction:column;
position:relative;
min-width:0px;
padding:0px;
margin:0px;
border:0px;
vertical-align:top;
width:100%;

}
.MUI_Form_Form_Root {
display:grid;
column-gap:5px;
row-gap:5px;
grid-template-columns:repeat(auto-fit,minmax(80px,1fr));

}
.MUI_IconButton_Root {
display:inline-flex;
align-items:center;
justify-content:center;
box-sizing:border-box;
background-color:transparent;
outline:0px;
border:0px;
cursor:pointer;
margin:0px;
user-select:none;
vertical-align:middle;
appearance:none;
text-decoration:none;
text-align:center;
flex:0 0 auto;
font-size:1.5rem;
padding:10px;
border-radius:50%;
min-width:24px;
min-height:24px;
color:var(--MUI_IconButton_Root-0);
width:fit-content;
height:fit-content;
transition:background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
overflow:hidden;

}
.MUI_IconButton_Root:hover {
background-color:rgba(33,150,243, 0.08);
 
}
.MUI_IconButton_Root_size_small {
transform:scale(1);

}
.MUI_IconButton_Root_size_medium {
transform:scale(1.3);

}
.MUI_IconButton_Root_size_large {
transform:scale(1.6);

}
.MUI_IconButton_Root_color_primary {
color:var(--MUI_IconButton_Root-1);

}
.MUI_IconButton_Root_color_secondary {
color:var(--MUI_IconButton_Root-2);

}
.MUI_IconButton_Root_disabled {
pointer-events:none;
cursor:default;
color:var(--MUI_IconButton_Root-3);

}
.MUI_IconButton_Root_disabled:hover {
background-color:inherit;
 
}
.MUI_IconButton_Icon {
fill:currentcolor;

}
.MUI_Menu_Wrapper {
width:fit-content;
height:fit-content;

}
.MUI_Menu_Wrapper_closed {
transform:scale(0,0) translateX(50%);
opacity:0;

}
.MUI_Menu_Root {
list-style:none;
margin:0px;
padding:8px 0px;
position:relative;

}
.MUI_Menu_Root_closed {
transform:scale(0,0);
overflow:hidden;

}
.MUI_Menu_Element_Root {
--webkit-tap-highlight-color:transparent;
background-color:transparent;
outline:0px;
border:0px;
margin:0px;
border-radius:0px;
cursor:pointer;
user-select:none;
vertical-align:middle;
appearance:none;
color:inherit;
font-family:Roboto, Helvetica, Arial, sans-serif;
font-weight:400;
font-size:1rem;
line-height:1.5;
letter-spacing:0.00938em;
display:flex;
--webkit-box-pack:start;
justify-content:flex-start;
--webkit-box-align:center;
align-items:center;
position:relative;
text-decoration:none;
padding:6px 16px;
box-sizing:border-box;
white-space:nowrap;
overflow:hidden;
width:100%;

}
.MUI_Menu_Element_Root:hover {
text-decoration:none;
background-color:rgba(0, 0, 0, 0.04);
 
}
.MUI_Menu_Element_StartIcon {
min-width:56px;
color:rgba(0, 0, 0, 0.54);
flex-shrink:0;
display:inline-flex;

}
.MUI_Pagination_Root {
display:flex;
flex-wrap:wrap;
--webkit-box-align:center;
align-items:center;
padding:0px;
margin:0px;
list-style:none;

}
.MUI_Pagination_Element {
width:40px;
height:40px;

}
.MUI_Progress_Root {
display:inline-block;
animation:1.4s linear 0s infinite normal none running MUI-Progress-Wheel;
width:40px;
height:40px;

}
@keyframes MUI-Progress-Wheel { 
0% { 
transform:rotate(0deg);

 }
100% { 
transform:rotate(360deg);

 } 
}
.MUI_Progress_Root_primary {
color:var(--MUI_Progress_Root-0);

}
.MUI_Progress_Root_secondary {
color:var(--MUI_Progress_Root-1);

}
.MUI_Progress_Root_error {
color:var(--MUI_Progress_Root-2);

}
.MUI_Progress_Root_success {
color:var(--MUI_Progress_Root-3);

}
.MUI_Progress_Cicle {
stroke:currentcolor;
stroke-dasharray:80px, 200px;
stroke-dashoffset:0;
animation:1.4s ease-in-out 0s infinite normal none running MUI_Progress_Circle;

}
@keyframes MUI_Progress_Circle { 
0% { 
stroke-dasharray:1px, 200px;
stroke-dashoffset:0;

 }
50% { 
stroke-dasharray:100px, 200px;
stroke-dashoffset:-15px;

 }
100% { 
stroke-dasharray:100px, 200px;
stroke-dashoffset:-125px;

 } 
}
.MUI_RadioButton_frame {
display:inline-flex;
align-items:center;
justify-content:center;
position:relative;
box-sizing:border-box;
background-color:transparent;
outline:0px;
border:0px;
margin:0px;
cursor:inherit;
user-select:none;
vertical-align:middle;
appearance:none;
text-decoration:none;
padding:9px;
border-radius:50%;

}
.MUI_RadioButton_frame:hover {
background-color:rgba(33, 150, 243, 0.08);
 
}
.MUI_RadioButton_wrapper {
display:inline-flex;
align-items:center;
cursor:pointer;
user-select:none;

}
.MUI_RadioButton_wrapper_disabled {
cursor:default;
border-color:rgba(0, 0, 0, 0.3);

}
.MUI_RadioFrame_frame {
border-radius:50%;
transition:ease-in-out 200ms;
cursor:inherit;
border:2px solid rgb(33, 150, 243);
padding:8px;

}
.MUI_RadioFrame_frame_selected {
padding:3px;

}
.MUI_RadioFrame_frame_disabled {
border:2px solid rgba(0, 0, 0, 0.3);

}
.MUI_Radio_Inner {
border-radius:50%;
transition:ease-in-out 200ms;
cursor:inherit;
width:0px;
height:0px;
background-color:rgb(33, 150, 243);

}
/* ... */

